<resources>
    <string name="app_name">Weather Daily</string>
    <string name="menu_home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="alerts">Alerts</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="clouds">Clouds</string>
    <string name="visibility">Visibility</string>
    <string name="uvi">UVI</string>
    <string name="meter_per_second">" m/s"</string>
    <string name="mile_per_hour">" mph"</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="gps">GPS</string>
    <string name="map">MAP</string>
    <string name="now">Now</string>
    <string name="temperature">Temperature</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="weather_is_fine">Weather is fine. no alerts for the schedule time period.</string>
    <string name="permission_request">Permission request</string>
    <string name="please_allow_draw_over_apps_permission">please allow Draw Over Apps permission to be able to use application properly.</string>
    <string name="warning">Warning</string>
    <string name="unfortunately_the_display_over_other_apps_permission_is_not_granted">Unfortunately the display over other apps permission is not granted.</string>
    <string name="m">" m"</string>
    <string name="hpa">" hPa"</string>
    <string name="c_symbol" translatable="false"><sup>°C</sup></string>
    <string name="k_symbol" translatable="false"><sup>°K</sup></string>
    <string name="f_symbol" translatable="false"><sup>°F</sup></string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_to_remove_this_item">Do you want to remove this item?</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="set_zone">set Zone</string>
    <string name="alert">alert</string>
    <string name="fav_location">fav location</string>
    <string name="save_location">save location</string>
    <string name="dismiss">Dismiss</string>
    <string name="london">London</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="stay_informed_stay_prepared">Stay Informed, Stay Prepared</string>
    <string name="my_favourite">My Favourite</string>
    <string name="weather_daily_alert">Weather Daily Alert</string>
    <string name="please_choose_loc_first">Please choose location first.</string>


</resources>