<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/favouriteFragment"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favorite" />
        <item
            android:id="@+id/alertFragment"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/alerts" />
        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings" />

    </group>

</menu>