<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.settings.view.SettingFragment">

    <TextView
        android:id="@+id/txt_titlee"
        style="@style/myFontBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="24dp"
        android:elevation="16dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintTop_toBottomOf="@id/txt_titlee">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">


            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/secondary"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupChooseLanguage" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/secondary"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupLocation" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/secondary"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radioGroupTempDegree" />

            <RadioGroup
                android:id="@+id/radioGroupTempDegree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/radio_button_C"
                    style="@style/myFontMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/secondary"
                    android:text="@string/celsius"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_K"
                    style="@style/myFontMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/secondary"
                    android:text="@string/kelvin"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_F"
                    style="@style/myFontMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/secondary"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupWindSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:checkedButton="@+id/radio_button_1"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <RadioButton
                    android:id="@+id/radio_button_MPerSec"
                    style="@style/myFontMedium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondary"
                    android:text="@string/meter_per_second"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_MilePerHour"
                    style="@style/myFontMedium"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:buttonTint="@color/secondary"
                    android:text="@string/mile_per_hour"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupChooseLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:gravity="center"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/radio_button_English"
                    style="@style/myFontMedium"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/secondary"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_Arabic"
                    style="@style/myFontMedium"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/secondary"
                    android:text="@string/arabic"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroupLocation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radio_button_GPS"
                    style="@style/myFontMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/secondary"
                    android:text="@string/gps"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radio_button_map"
                    style="@style/myFontMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/secondary"
                    android:text="@string/map"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                style="@style/myFontSemiDold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/textView2"
                style="@style/myFontSemiDold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />


            <TextView
                android:id="@+id/textView3"
                style="@style/myFontSemiDold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/language"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                style="@style/myFontSemiDold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    z

</androidx.constraintlayout.widget.ConstraintLayout>