<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginHorizontal="30dp"
    app:cardCornerRadius="28dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_yes_no"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/deletepana"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/checkTxt"
            style="@style/myFontSemiDold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_remove_this_item"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_yes_no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkTxt">

            <TextView
                android:id="@+id/remove"
                style="@style/myFontBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remove"
                android:textColor="@color/secondary"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/cancel"
                style="@style/myFontBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
