<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_corner"
    android:backgroundTint="@color/white">

    <ImageView
        android:id="@+id/imageView_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/img"
        app:layout_constraintBottom_toBottomOf="@+id/textView_tilte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_tilte" />

    <TextView
        android:id="@+id/textView_tilte"
        style="@style/myFontBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/weather_daily_alert"
        android:textColor="@color/secondary"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/textViewDescribtionMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewDescribtionMessage"
        style="@style/myFontMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@+id/btn_dismiss"
        app:layout_constraintEnd_toEndOf="@+id/textView_tilte"
        app:layout_constraintStart_toStartOf="@+id/imageView_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView_tilte"
        tools:text="@string/weather_is_fine" />

    <Button
        android:id="@+id/btn_dismiss"
        style="@style/myFontSemiDold"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/dismiss"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewDescribtionMessage"
        app:layout_constraintStart_toStartOf="@+id/imageView_icon"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescribtionMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>